# Image_Sim

./: .gitignore  CMakeLists.txt  prepare_submission.ps1
docs/: BUILD_LATEX.md  LATEX_CONVERSION_SUMMARY.md  bao_cao_cbir_template.md  check_lists.md  evaluation_results.md  final_report_template.md  learned.md  next_step.md  requirements.md
docs/latex/: main.tex
docs/latex/appendices/: appendix_build.tex  appendix_parameters.tex  appendix_sources.tex
docs/latex/bibliography/: references.bib
docs/latex/chapters/: 01_gioi_thieu.tex  02_co_so_ly_thuyet.tex  03_phan_tich_thiet_ke.tex  04_cai_dat.tex  05_huong_dan_su_dung.tex  06_thuc_nghiem.tex  07_muc_do_hoan_thanh.tex  08_kiem_thu.tex  09_han_che_phat_trien.tex  10_ket_luan.tex
docs/latex/config/: commands.tex  metadata.tex  packages.tex
include/: ColorCorrelogram.h  ColorHistogram.h  DatabaseBuilder.h  FeatureExtractor.h  ForwardIndex.h  FusionExtractor.h  GUIApp.h  HOGExtractor.h  ImageSearchEngine.h  InvertedIndex.h  LBPExtractor.h  ORBExtractor.h  SIFTExtractor.h
scratch/: fix_cd_paths.py
src/: ColorCorrelogram.cpp  ColorHistogram.cpp  DatabaseBuilder.cpp  ForwardIndex.cpp  FusionExtractor.cpp  GUIApp.cpp  HOGExtractor.cpp  ImageSearchEngine.cpp  InvertedIndex.cpp  LBPExtractor.cpp  ORBExtractor.cpp  SIFTExtractor.cpp  build_features.cpp  evaluate_debug.cpp  evaluate_map.cpp  main_gui.cpp
